Fixed line-height on headings (.heading) in the reader text (in versions such as NIV). Existing code had the spacing way too big. CSS wasn't written properly and it's properties weren't being applied.

--- a/app/assets/stylesheets/_reader_text.scss
+++ b/app/assets/stylesheets/_reader_text.scss
@@ -176,9 +176,10 @@
 
 // Font size should be set in the parent element: (for example .s)
 .heading {
-  font-size: 1em;
+  font-size: 1.03em;
   font-weight: bold;
-  line-height: 1em;
+  line-height: 1.2em;
+  display: block;
   margin: 0 0 1em 0;
   -webkit-font-smoothing: subpixel-antialiased;
 }
